--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,17 +7,15 @@ requires-python = ">=3.11"
 dependencies = [
     "funasr>=1.0",
     "modelscope>=1.9",
-    "yt-dlp>=2023.12",
+    "yt-dlp[default]>=2023.12",
     "torch>=1.13",
-    "torchaudio>=0.13"
-
+    "torchaudio>=0.13",
 ]
 
 # China mirrors
 [tool.uv.sources]
 torch = [ { index = "pytorch" } ]
 torchaudio = [ { index = "pytorch" } ]
-torchvision = [ { index = "pytorch" } ]
 
 [[tool.uv.index]]
 name = "pytorch"
